--- a/subarashi/package.json
+++ b/subarashi/package.json
@@ -20,6 +20,9 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.12",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
