--- a/subarashi/package.json
+++ b/subarashi/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@notionhq/client": "^2.3.0",
+    "aos": "^2.3.4",
     "claude": "^0.0.6",
     "dotenv": "^16.4.7",
     "firebase": "^11.3.0",
