--- a/subarashi/package.json
+++ b/subarashi/package.json
@@ -18,6 +18,7 @@
     "claude": "^0.0.6",
     "dotenv": "^16.4.7",
     "firebase": "^11.3.0",
+    "framer-motion": "^12.15.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
